css/style.css
/* ... */
.blue-background {
  background-color: #1893E7;
}

.white-border {
  border: 2px solid #FFFFFF;  
}

/* content sections */
.main {
  width: 80%;
  max-width: 1440px;
  margin: 0 auto;
  background-color: #FFFFFF;
}

.content-section {
  min-height: 100%;
  padding: 4.25em 0;
}

.content-section h2 {
  margin-top: 1.5em;
  margin-bottom: 1em;
}

.content-section h4 {
  margin-bottom: 1em;
}

.content-right {
  width: 40.17094017%; /* 470/1170 = 0.4017094017 */
  float: right;
}

.content-left {
  width: 40.17094017%;  /* 470/1170 = 0.4017094017 */
  float: left;
}

.content-left p,
.content-right p {
  margin-bottom: 2.5em;
}

/* page */
.page-wrapper {
  width: 67.36111111%; /* 970/1440 */
  margin: auto;
  /* margin-top: 2.25em; 36/16 */
  position: relative;
  top: -30.54420922%; /* 630/803 */  
  font-size: 1.3125em; /* 21/16 */
  z-index: 0;

}

/* .background--v1Border {
  border-left: solid 1em #D1B471;
  border-right: solid 1em #D1B471;
  border-bottom: solid 1em #D1B471;
  padding-bottom: 6.1875em; 
  
} */

/* individual volume pages */
.page {
  position: relative;
  top: 0;
  padding-top: 5.1428571429em;
  background-color: #FFFFFF;    
  /* background-color: #ffffff; */
  -webkit-clip-path: polygon(169px 0, 100% 0, 100% 100%, 0% 100%, 0 169px);
  clip-path: polygon(169px 0, 100% 0, 100% 100%, 0% 100%, 0 169px);  
}

.page--corner-1 {
  height: 169px;
  width: 169px;
  position: absolute;
  top: 0em;
  background-color: rgba(255,255,255,0.2);
  z-index: 2;
  -webkit-clip-path: polygon(100% 0, 0% 100%, 0 0);
  clip-path: polygon(100% 0, 0% 100%, 0 0);
  /* background-color: red; */
}

.number {
  position: absolute;
  top: 0;
  left: 1.0952380952em; 
}

.number h2 {
  font-size: 3.4285714286em;
  line-height: .75em;
}

.page p, h3 {
  margin: 0 6.1875em; /* 99/16 */
  margin-bottom: 1em;
}

.chapter p:last-child {
  margin-bottom: 9em;
}
/* end individual volume pages */



/* button styles */
.btn {
  display: inline-block;
  text-align: center;
  padding: 1.5em 6em;
  text-shadow: initial;
  border-radius: 48px;
  box-shadow: 0 1px 2px rgba(0,0,0,0.15);
  transition: box-shadow 0.15s ease-in-out;
  margin: auto;
}

.btn:hover {
  box-shadow: 0 5px 15px rgba(0,0,0,0.3);
  transition: box-shadow 0.15s ease-in-out;
}

@media (max-width: 1024px){

  /* page */
  .page-wrapper {
    width: 90%; /* 970/1440 */
    margin: auto;
    /* margin-top: 2.25em; 36/16 */
    position: relative;
    top: -30.54420922%; /* 630/803 */  
    font-size: 1.3125em; /* 21/16 */
    z-index: 0;

  }
}

/* media query for site nav tablet */
@media (max-width: 768px) {

  /* text styles */
  body {
    font-size: 1em; /* 11/16 new tablet baseline size */
  }

  .hero-text {
    font-size: .75em;
  }
  /* end text styles */
  

  /* header */
  .hero-image--home {
    background-image: url("../images/homepage/TabletJumbotron@2x.jpg");  
  }
  .hero-image--volume1 {
    background-image: url("../images/reading-images/tabletHeroImageVolume1@2x.jpg");    
  }
  .hero-image--volume2 {
    background-image: url("../images/reading-images/tabletHeroImageVolume2@2x.jpg");    
  }

  /* navigation styles */
  /* menu toggle for nav dropdowns */
  .menu-toggle {
    padding: .905em 1em;
    position: absolute;
    right: 2.1875em;
    top: 2.625em;
    cursor: pointer;
  }

  .hamburger,
  .hamburger::before,
  .hamburger::after {
    content: '';
    display: block;
    height: 2px;
    width: 1.75em;
    background: #EBEBEB;
    transition: all ease-in-out 200ms;
  }

  .hamburger::before {
    transform: translateY(-8px);
  }

  .hamburger::after {
    transform: translateY(6px);
  }

  .open .hamburger {
    transform: rotate(135deg);
  }

  .open .hamburger::before {
    transform: rotate(270deg);
  }

  .open .hamburger::after {
    opacity: 0;    
  }
  /*end menu toggle */

  /* .sub-nav {
    display: block;
    position: absolute;
  } */

  .site-nav {
    position: absolute;
    top: 70%;
    right: 0%;
    background: #393838;
    float: right;
    height: 0;
    overflow: hidden;
  }

  .site-nav--open {
    height: auto;
  }

  .site-nav a:hover,
  .site-nav a:focus {
    background-color: #D1B471;
    color: #4B4B4B;
  }

  header::after {
    content: '';
    clear: both;
    display: block;
  }

  .site-nav ul {
    margin: 0;
    padding: 0;
    list-style: none;
  }

  .site-nav li {
    display: block;
    border-bottom: 1px solid #575766;
  }

  .site-nav a {
    text-decoration: none;
    display: block;
    padding: 1.5em 7em;
  }

  .site-nav li:last-child {
    border-bottom: none;
  }
  /* end navigation styles */

  /* social */
  .social {
    position: fixed;
    right: 1.75em;
    top: 40%;
    font-size: 1.25em;  
  }
  /* end social */

  /* content sections */
  .main {
    width: 100%;
    max-width: 768px;
    margin: 0 auto;
    background-color: #FFFFFF;
  }

  .content-section {
    min-height: 100%;
    padding: 4.25em 0;
  }

  .content-section h2 {
    margin-top: 1em;
    margin-bottom: .5em;
    text-align: center;
  }

  .content-section h4 {
    margin-top:1em;    
    margin-bottom: 1em;
  }

  .content-right,
  .content-left {
    width: 50%; /* 345/768 */
    float: none;
    margin: auto;
  }


  .content-left p,
  .content-right p {
    margin-bottom: 2.5em;
  }

  .volume-cta {
    text-align: center;
  }

  #about p:first-of-type {
    margin-top: 1em;
  }
  /* end content sections */
  
  /* individual volume pages */
  .page-wrapper {
    width: 95%; /* 970/1440 */
  }  

  .page p, h3 {
    margin: 0 4em; /* */
    margin-bottom: 1em;
  }
  /* end individual volume pages */

}
/* ... */

